Fix missing color value

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #fdfbfe;
     --bg-color: #040104;
-    --primary-button-color: #;
+    --primary-button-color: #ff00a8;
     --primary-button-hover: #ff58c7;
     --primary-button-active: #ac0072;
     --secondary-button-color: #000000;
